<resources>
    <string name="app_name">Phoco - The Image Searching App</string>
    <string name="search">Search</string>
    <string name="imageview">imageView</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="fabbutton">fabButton</string>
    <string name="unable_to_open_file">Unable to open the file</string>
    <string name="downloading_file">downloading file</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="original">Original</string>
    <string name="unsplash">Unsplash</string>
    <string name="pixabay">Pixabay</string>
    <string name="pexels">Pexels</string>
    <string name="web">Web</string>
    <string name="retry">Retry</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="all_photos">All photos</string>
    <string name="add">Add</string>
    <string name="collection_name">Collection name</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="choose_collection">Choose collection</string>
    <string name="imagebutton">imageButton</string>
    <string name="add_new_collection">Add new collection</string>
    <string name="edit_collection">Edit collection</string>
    <string name="save">Save</string>
    <string name="no_results_found">No results found !!!</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail *</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="confirm_password">Confirm password *</string>
    <string name="create_a_phoco_account">Create account</string>
    <string name="accept_terms_amp_condition">Agree with Terms &amp; Condition</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="photos">Photos</string>
    <string name="likes">Likes</string>
    <string name="following">Following</string>
    <string name="unDraw">unDraw</string>
    <string name="share_image_link">Share image link</string>
    <string name="share_image">Share image</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="share_images_link_as_text">Share images link as text</string>
    <string name="share_images_link_as_pdf">Share images link as pdf</string>
    <string name="export_images_link">Export images link (pdf)</string>
    <string name="export_images_image">Export images (pdf)</string>
    <string name="share_collection_images">Share collection images</string>
    <string name="export_images">Export images</string>
    <string name="no_collections_added">No collections added</string>
</resources>